# beginner_c

./: CMakeLists.txt
01-swap/: swap  swap.c
02-minmax/: minMax  minMax.c
03-sizeof/: sizeOf  sizeOf.c
04-generic_pointer/: main  main.c
05-arrays_pointers/: arrays  arrays.c  max  maxmium.c  search  searching.c
06-input-print-functions/: source.c
07-DMA/adjustable_reallocation_Perf/: 1dArray.c  adjRealloc.c
07-DMA/calloc/: calloc.c
07-DMA/challenges/: challenge-2.c
07-DMA/challenges_with_arrays/: CopyArray  CopyArray.c  insert_function.c  odd_even  odd_even_arrays.c  removeDupArrays  removeDupArrays.c
07-DMA/free/: free.c
07-DMA/malloc/: 01-malloc  01-malloc.c
07-DMA/realloc/: realloc  realloc.c
08-2DArrays/: 02  02-2DArrays.c  main  main.c
09-Dynamically_Allocated_Arrays/: 103-Totally_Dynamically_2D_Array.c  104-allocate2DMatrix.c  105-Print-2d-Array.c  106-free-dynamically-allocated-matrix.c  108-Swap-2-rows.c  111-lower_triangle_matrix.c  115-2D-array-allocation-passing-by-reference.c
10-StringsAndPointers/: Extra-Strings.c  strings.c
11-StringFunctions/: 01-Str_Funs.c  02-StrCat.c  03-strcpy.c  04-strcmp.cpp
Challenges/: challenge-3  challenge-3.1  challenge-3.1.c  challenge-3.c  challenge-4.c
sizeof/: sizeOf.c
